
Changelog
=========

1.6 (unreleased)
----------------
- Upgrades to latest collective.geo.* releases (not backwards compatible)
- Removes fieldset/legend from directory search
- Adds category values to extended data if collective.geo.fastkml is installed.
  Use seantis.dir.base[extended_data] to install. Collective.geo.fastkml will
  be merged into collective.geo.kml in the future at which point this feature
  will no longer be optional.

1.5.9
-----
- Update French translations

1.5.8
-----
- Exclude \*.mo files from the release

1.5.7
-----
- Show 'Any' instead of 'Whatever'
- Wrap search text in quotes to avoid query parsers errors

1.5.6
-----
- Fixes group-less forms controlled by seantis.dir.base crashing
- Temporarily reintroduces jq as jQuery alias for collective.geo.mapwidget 
  until the new release is out of beta.

1.5.5
-----
- Put search and categories on different lines if more than two categories
  and the searchbox is active

1.5.4
-----
- Stop directory search from throwing exceptions if an empty string is given
- Show 'Whatever' instead of an empty string as default in filter combo boxes

1.5.3
-----
- Render ative/pulsating map markers in front of inactive ones
- Make core form work with directory again
- Prevents code from storing categories as sets (which trips up the keyword index)

1.5.2
-----
- Stop hooking up group forms completely, fixing an issue in seantis.dir.events

1.5.1
-----
- Limit portlet blocking to directory, making it easy to enable portlets for
  all items through the portlet settings of the directory. Fixes #4.
- Fixes form view failing on IDirectoryCategorized items outside a directory
- Fixes form reordering issue on group forms

1.5
---
- Adds a behavior with which any item can be used as a directory item.

  This is a major change to the way directories and their items relate to each
  other internally. All directories using seantis.dir.base have to be migrated